--- a/index.html
+++ b/index.html
@@ -138,22 +138,28 @@
         <h2>Зв'яжись з нами</h2>
         <p>Хочеш заказати виступ або маєш питання? Пиши!</p>
         <div class="wrapper">
-          <form id="contactForm" class="contact-form">
+          <form id="contactForm" class="contact-form" novalidate>
             <div class="inputs-wrapper">
               <div class="input-wrapper">
                 <label for="name">Ім'я</label>
-                <input id="name" type="text" name="name" required>
+                <input id="name" type="text" name="name" required minlength="2">
+                <div class="error-message" id="nameError"></div>
               </div>
               <div class="input-wrapper">
                 <label for="email">Email</label>
                 <input id="email" type="email" name="email" required>
+                <div class="error-message" id="emailError"></div>
               </div>
             </div>
-            <label for="message">Повідомлення</label>
-            <textarea id="message" name="message" placeholder="Розкажи про свої ідеї..."></textarea>
 
-            <button type="submit" class=" btn-form">Відправити</button>
+            <label for="message">Повідомлення</label>
+            <textarea id="message" name="message" placeholder="Розкажи про свої ідеї..." required
+              minlength="5"></textarea>
+            <div class="error-message" id="messageError"></div>
+
+            <button type="submit" class="btn-form">Відправити</button>
           </form>
+
           <div class="map">
             <h3>Наше місце знаходження</h3>
             <iframe
@@ -161,7 +167,6 @@
               width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade">
             </iframe>
-
           </div>
         </div>
       </div>
@@ -186,6 +191,28 @@
       </div>
     </div>
   </footer>
+
+  <div id="ticketModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Замовлення квитка</h2>
+      <form id="ticketForm">
+        <label for="city">Місто / Заклад</label>
+        <input type="text" id="city" name="city" readonly>
+
+        <label for="date">Дата і час</label>
+        <input type="text" id="date" name="date" readonly>
+
+        <label for="name">Ваше ім’я</label>
+        <input type="text" id="ticketName" name="name" required minlength="2">
+
+        <label for="email">Email</label>
+        <input type="email" id="ticketEmail" name="email" required>
+
+        <button type="submit" class="btn-form">Підтвердити</button>
+      </form>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
